--- a/formats/logger/i18n/pt-br.json
+++ b/formats/logger/i18n/pt-br.json
@@ -1,63 +1,63 @@
 {
     "edit": "{{user|$1}} editou {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "edit-post": "{{user|$1}} editou {{link|Thread:$2|$3}} em {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
-    "edit-reply": "{{user|$1}} editou resposta em {{link|Thread:$2|$3}} em {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
+    "edit-post": "{{user|$1}} editou {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
+    "edit-reply": "{{user|$1}} editou a resposta em {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} criou {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
     "new-post": "{{user|$1}} postou {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}} replied to {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "threadclose": "{{user|$1}} fechou {{link|$2|$3}} no {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reopened {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
-    "threadremove": "{{user|$1}} removeu {{link|$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
-    "threaddelete": "{{user|$1}} deletou {{link|$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
-    "threadrestore": "{{user|$1}} restaurou {{link|$2|$3}} no {{board|$4|$5}} {{summary|$6}}",
+    "new-reply": "{{user|$1}} postou uma resposta em {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
+    "threadclose": "{{user|$1}} fechou {{link|Thread:$2|$3}} no {{board|$4|$5}} {{summary|$6}}",
+    "threadreopen": "{{user|$1}} reabriu {{link|Thread:$2|$3}} no {{board|$4|$5}} {{summary|$6}}",
+    "threadremove": "{{user|$1}} removeu {{link|Thread:$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
+    "threaddelete": "{{user|$1}} excluiu {{link|Thread:$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
+    "threadrestore": "{{user|$1}} restaurou {{link|Thread:$2|$3}} a {{board|$4|$5}} {{summary|$6}}",
     "block": "{{user|$1}} bloqueou {{user|$2}} por $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} desbloqueou {{user|$2}} {{summary|$3}}",
     "reblock": "{{user|$1}} alterou bloqueio de {{user|$2}} para $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} protegeu {{link|$2}} para $3 {{summary|$4}}",
     "reprotect": "{{user|$1}} alterou proteção de {{link|$2}} para $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} removeu proteção de {{link|$2}} {{summary|$3}}",
-    "moveprotect": "{{user|$1}} moved protection from $2 to {{link|$3}} {{summary|$4}}",
+    "moveprotect": "{{user|$1}} moveu a proteção de $2 para {{link|$3}} {{summary|$4}}",
     "rights": "{{user|$1}} alterou os direitos de usuário para {{user|$2}} de $3 para $4 {{summary|$5}}",
-    "delete": "{{user|$1}} deletou $2 {{summary|$3}}",
+    "delete": "{{user|$1}} eliminou $2 {{summary|$3}}",
     "restore": "{{user|$1}} restaurou revisões em {{link|$2}} {{summary|$3}}",
-    "revdel": "{{user|$1}} deletou revisão $2 em $3 {{summary|$4}}",
-    "logdel": "{{user|$1}} ocultou um evento no registro $2 {{summary|$3}}",
+    "revdel": "{{user|$1}} eliminou revisões em {{link|$2}} {{summary|$3}}",
+    "logdel": "{{user|$1}} ocultou um evento do registro em {{link|$2}} {{summary|$3}}",
     "upload": "{{user|$1}} fez o envio de {{link|$2|$3}} {{summary|$4}}",
     "reupload": "{{user|$1}} reenviou {{link|$2|$3}} {{summary|$4}}",
     "move": "{{user|$1}} moveu $2 para {{link|$3}} {{summary|$4}}",
-    "moveredir": "{{user|$1}} renomeou $2 para {{link|$3}} com um redirecionamento {{summary|$4}}",
+    "moveredir": "{{user|$1}} moveu $2 para {{link|$3}} sobrescrevendo um redirecionamento {{summary|$4}}",
     "merge": "{{user|$1}} mesclou os históricos de $2 e {{link|$3}} {{summary|$4}}",
     "avatar": "{{user|$1}} alterou o avatar",
     "remavatar": "{{user|$1}} removeu o avatar de {{user|$2}}",
     "abusefilter": "{{user|$1}} modificou o filtro de abuso ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} criou uma conta",
-    "wikifeatures": "{{user|$1}} has $2 the $3 wiki feature",
+    "wikifeatures": "{{user|$1}} $2 o recurso de $3 da wiki",
     "chatbanadd": "{{user|$1}} baniu {{user|$2}} do chat por $3 {{summary|$4}}",
     "chatbanchange": "{{user|$1}} alterou o banimento do chat de {{user|$2}} para $3 {{summary|$4}}",
     "chatbanremove": "{{user|$1}} removeu o banimento do chat para {{user|$2}} {{summary|$3}}",
-    "board-1201": "Mural de $1",
-    "board-2001": "Quadro $1",
+    "board-1201": "mural de $1",
+    "board-2001": "quadro $1",
     "diff": "dif",
-    "talk": "t",
+    "talk": "d",
     "contribs": "c",
-    "rights-none": "(none)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
-    "discussions-reply": "a reply",
-    "discussions-create-post": "posted",
-    "discussions-create-report": "reported",
-    "discussions-deleted": "deleted",
-    "discussions-un-deleted": "undeleted",
-    "discussions-modified": "edited",
-    "discussions-moved": "moved",
-    "feature-enable": "enabled",
-    "feature-disable": "disabled",
-    "feature-wgEnableAjaxPollExt": "polls",
+    "rights-none": "(nenhum)",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) em $7 {{summary|$8}}",
+    "discussions-reply": "uma resposta",
+    "discussions-create-post": "postou",
+    "discussions-create-report": "reportou",
+    "discussions-deleted": "excluiu",
+    "discussions-un-deleted": "restaurou",
+    "discussions-modified": "editou",
+    "discussions-moved": "moveu",
+    "feature-enable": "ativou",
+    "feature-disable": "desativou",
+    "feature-wgEnableAjaxPollExt": "votações",
     "feature-wgEnableBlogArticles": "blogs",
-    "feature-wgEnableArticleCommentsExt": "article comments",
-    "feature-wgEnableCategoryExhibitionExt": "category exhibition",
-    "feature-wgEnableWallExt": "Message Walls",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Infobox Theme",
-    "feature-wgEnableMediaGalleryExt": "new galleries",
+    "feature-wgEnableArticleCommentsExt": "comentários do artigo",
+    "feature-wgEnableCategoryExhibitionExt": "exibição de categorias",
+    "feature-wgEnableWallExt": "murais de mensagem",
+    "feature-wgEnablePortableInfoboxEuropaTheme": "tema de infobox Europa",
+    "feature-wgEnableMediaGalleryExt": "novas galerias",
     "feature-wgEnableChat": "chat",
-    "feature-wgDisableAnonymousEditing": "the account requirement"
+    "feature-wgDisableAnonymousEditing": "o requisito de conta"
 }
