`logger` format UCP update.

--- a/formats/logger/i18n/de.json
+++ b/formats/logger/i18n/de.json
@@ -1,15 +1,6 @@
 {
     "edit": "{{user|$1}} bearbeitet {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "edit-post": "{{user|$1}} bearbeitet {{link|Thread:$2|$3}} auf {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
-    "edit-reply": "{{user|$1}} bearbeitet antwort auf {{link|Thread:$2|$3}} auf {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} erstellt {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
-    "new-post": "{{user|$1}} gepostet {{link|Thread:$2|$3}} auf {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}} beantwortet auf {{link|Thread:$2|$3}} auf {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "threadclose": "{{user|$1}} geschlossen {{link|$2|$3}} auf {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reopened {{link|Thread:$2|$3}} on {{board|$4|$5}} {{summary|$6}}",
-    "threadremove": "{{user|$1}} entfernt {{link|$2|$3}} vom {{board|$4|$5}} {{summary|$6}}",
-    "threaddelete": "{{user|$1}} gelöscht {{link|$2|$3}} vom {{board|$4|$5}} {{summary|$6}}",
-    "threadrestore": "{{user|$1}} restored {{link|$2|$3}} zu {{board|$4|$5}} {{summary|$6}}",
     "block": "{{user|$1}} gesperrt {{user|$2}} für $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} entsperrt {{user|$2}} {{summary|$3}}",
     "reblock": "{{user|$1}} blockiert geändert für {{user|$2}} zu $3 {{flags|$4}}{{summary|$5}}",
@@ -27,37 +18,19 @@
     "move": "{{user|$1}} hat verlagern $2 zu {{link|$3}} {{summary|$4}}",
     "moveredir": "{{user|$1}} hat verlagern $2 zu {{link|$3}} über eine weiterleitung {{summary|$4}}",
     "merge": "{{user|$1}} verschmolzen dokumentation von $2 und {{link|$3}} {{summary|$4}}",
-    "avatar": "{{user|$1}} avatar geändert",
-    "remavatar": "{{user|$1}} avatar entfellt von {{user|$2}}",
     "abusefilter": "{{user|$1}} modifizierte missbrauchsfilter id $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} hat ein konto erstellt",
-    "wikifeatures": "{{user|$1}} has $2 the $3 wiki feature",
-    "chatbanadd": "{{user|$1}} verboten {{user|$2}} von chat für $3 {{summary|$4}}",
-    "chatbanchange": "{{user|$1}} hat das chatverbot für geändert {{user|$2}} zu $3 {{summary|$4}}",
-    "chatbanremove": "{{user|$1}} hat das chatverbot für beendet {{user|$2}} {{summary|$3}}",
-    "board-1201": "$1's wand",
-    "board-2001": "$1 brett",
     "diff": "diff",
     "talk": "t",
     "contribs": "c",
     "rights-none": "(none)",
     "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
     "discussions-reply": "a reply",
+    "discussions-thread": "a thread",
     "discussions-create-post": "posted",
     "discussions-create-report": "reported",
     "discussions-deleted": "deleted",
     "discussions-un-deleted": "undeleted",
     "discussions-modified": "edited",
-    "discussions-moved": "moved",
-    "feature-enable": "enabled",
-    "feature-disable": "disabled",
-    "feature-wgEnableAjaxPollExt": "polls",
-    "feature-wgEnableBlogArticles": "blogs",
-    "feature-wgEnableArticleCommentsExt": "article comments",
-    "feature-wgEnableCategoryExhibitionExt": "category exhibition",
-    "feature-wgEnableWallExt": "Message Walls",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "Europa Infobox Theme",
-    "feature-wgEnableMediaGalleryExt": "new galleries",
-    "feature-wgEnableChat": "chat",
-    "feature-wgDisableAnonymousEditing": "the account requirement"
+    "discussions-moved": "moved"
 }
