--- a/formats/logger/i18n/es.json
+++ b/formats/logger/i18n/es.json
@@ -1,15 +1,6 @@
 {
     "edit": "{{user|$1}} editó {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "edit-post": "{{user|$1}} editó {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
-    "edit-reply": "{{user|$1}} editó la respuesta en {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} creó {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
-    "new-post": "{{user|$1}} dejó {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}} respondió a {{link|Thread:$2|$3}} en {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "threadclose": "{{user|$1}} cerró {{link|$2|$3}} en {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reabrió {{link|Thread:$2|$3}} en {{board|$4|$5}} {{summary|$6}}",
-    "threadremove": "{{user|$1}} retiró {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
-    "threaddelete": "{{user|$1}} retiró {{link|$2|$3}} de {{board|$4|$5}} {{summary|$6}}",
-    "threadrestore": "{{user|$1}} restauró {{link|$2|$3}} en {{board|$4|$5}} {{summary|$6}}",
     "block": "{{user|$1}} bloqueó a {{user|$2}} por $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} desbloqueó a {{user|$2}} {{summary|$3}}",
     "reblock": "{{user|$1}} cambió el bloqueo para {{user|$2}} por $3 {{flags|$4}}{{summary|$5}}",
@@ -27,37 +18,19 @@
     "move": "{{user|$1}} renombró $2 a {{link|$3}} {{summary|$4}}",
     "moveredir": "{{user|$1}} renombró $2 a {{link|$3}} en una redirección {{summary|$4}}",
     "merge": "{{user|$1}} fusionó los historiales de $2 y {{link|$3}} {{summary|$4}}",
-    "avatar": "{{user|$1}} cambió su avatar",
-    "remavatar": "{{user|$1}} quitó el avatar de {{user|$2}}",
     "abusefilter": "{{user|$1}} modificó el filtro de abusos con ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} creó una nueva cuenta",
-    "wikifeatures": "{{user|$1}} $2 $3 en la wiki",
-    "chatbanadd": "{{user|$1}} baneó a {{user|$2}} del chat por $3 {{summary|$4}}",
-    "chatbanchange": "{{user|$1}} cambió el baneo del chat de {{user|$2}} a $3 {{summary|$4}}",
-    "chatbanremove": "{{user|$1}} ha terminado el baneo del chat de {{user|$2}} {{summary|$3}}",
-    "board-1201": "Muro de $1",
-    "board-2001": "Foro de $1",
     "diff": "diff",
     "talk": "d",
     "contribs": "c",
     "rights-none": "(ninguno)",
     "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) en $7 {{summary|$8}}",
     "discussions-reply": "una respuesta",
+    "discussions-thread": "a thread",
     "discussions-create-post": "posteado",
     "discussions-create-report": "reportado",
     "discussions-deleted": "eliminado",
     "discussions-un-deleted": "restaurado",
     "discussions-modified": "editado",
-    "discussions-moved": "movido",
-    "feature-enable": "habilitó",
-    "feature-disable": "deshabilitó",
-    "feature-wgEnableAjaxPollExt": "las encuestas",
-    "feature-wgEnableBlogArticles": "los blogs",
-    "feature-wgEnableArticleCommentsExt": "los comentarios en artículos",
-    "feature-wgEnableCategoryExhibitionExt": "la exhibición de categorías",
-    "feature-wgEnableWallExt": "los Muros",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "las Fichas con el Tema Europa",
-    "feature-wgEnableMediaGalleryExt": "las galerías nuevas",
-    "feature-wgEnableChat": "el chat",
-    "feature-wgDisableAnonymousEditing": "el requerimiento de una cuenta"
+    "discussions-moved": "movido"
 }
