--- a/formats/logger/i18n/pt-br.json
+++ b/formats/logger/i18n/pt-br.json
@@ -1,15 +1,6 @@
 {
     "edit": "{{user|$1}} editou {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "edit-post": "{{user|$1}} editou {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
-    "edit-reply": "{{user|$1}} editou a resposta em {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{diff|$7}}",
     "new": "{{user|$1}} criou {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
-    "new-post": "{{user|$1}} postou {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "new-reply": "{{user|$1}} postou uma resposta em {{link|Thread:$2|$3}} no {{board|$4|$5}} {{diffSize|$6}} {{summary|$7}}",
-    "threadclose": "{{user|$1}} fechou {{link|Thread:$2|$3}} no {{board|$4|$5}} {{summary|$6}}",
-    "threadreopen": "{{user|$1}} reabriu {{link|Thread:$2|$3}} no {{board|$4|$5}} {{summary|$6}}",
-    "threadremove": "{{user|$1}} removeu {{link|Thread:$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
-    "threaddelete": "{{user|$1}} excluiu {{link|Thread:$2|$3}} do {{board|$4|$5}} {{summary|$6}}",
-    "threadrestore": "{{user|$1}} restaurou {{link|Thread:$2|$3}} a {{board|$4|$5}} {{summary|$6}}",
     "block": "{{user|$1}} bloqueou {{user|$2}} por $3 {{flags|$4}}{{summary|$5}}",
     "unblock": "{{user|$1}} desbloqueou {{user|$2}} {{summary|$3}}",
     "reblock": "{{user|$1}} alterou bloqueio de {{user|$2}} para $3 {{flags|$4}}{{summary|$5}}",
@@ -27,37 +18,19 @@
     "move": "{{user|$1}} moveu $2 para {{link|$3}} {{summary|$4}}",
     "moveredir": "{{user|$1}} moveu $2 para {{link|$3}} sobrescrevendo um redirecionamento {{summary|$4}}",
     "merge": "{{user|$1}} mesclou os históricos de $2 e {{link|$3}} {{summary|$4}}",
-    "avatar": "{{user|$1}} alterou o avatar",
-    "remavatar": "{{user|$1}} removeu o avatar de {{user|$2}}",
     "abusefilter": "{{user|$1}} modificou o filtro de abuso ID $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
     "newusers": "{{user|$1}} criou uma conta",
-    "wikifeatures": "{{user|$1}} $2 o recurso de $3 da wiki",
-    "chatbanadd": "{{user|$1}} baniu {{user|$2}} do chat por $3 {{summary|$4}}",
-    "chatbanchange": "{{user|$1}} alterou o banimento do chat de {{user|$2}} para $3 {{summary|$4}}",
-    "chatbanremove": "{{user|$1}} removeu o banimento do chat para {{user|$2}} {{summary|$3}}",
-    "board-1201": "mural de $1",
-    "board-2001": "quadro $1",
     "diff": "dif",
     "talk": "d",
     "contribs": "c",
     "rights-none": "(nenhum)",
     "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) em $7 {{summary|$8}}",
     "discussions-reply": "uma resposta",
+    "discussions-thread": "a thread",
     "discussions-create-post": "postou",
     "discussions-create-report": "reportou",
     "discussions-deleted": "excluiu",
     "discussions-un-deleted": "restaurou",
     "discussions-modified": "editou",
-    "discussions-moved": "moveu",
-    "feature-enable": "ativou",
-    "feature-disable": "desativou",
-    "feature-wgEnableAjaxPollExt": "votações",
-    "feature-wgEnableBlogArticles": "blogs",
-    "feature-wgEnableArticleCommentsExt": "comentários do artigo",
-    "feature-wgEnableCategoryExhibitionExt": "exibição de categorias",
-    "feature-wgEnableWallExt": "murais de mensagem",
-    "feature-wgEnablePortableInfoboxEuropaTheme": "tema de infobox Europa",
-    "feature-wgEnableMediaGalleryExt": "novas galerias",
-    "feature-wgEnableChat": "chat",
-    "feature-wgDisableAnonymousEditing": "o requisito de conta"
+    "discussions-moved": "moveu"
 }
