--- a/formats/logger/i18n/es.json
+++ b/formats/logger/i18n/es.json
@@ -24,12 +24,16 @@
     "talk": "d",
     "contribs": "c",
     "rights-none": "(ninguno)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) en $7 {{summary|$8}}",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5|$6|$8}} ($7) {{board|$8|$4}} {{summary|$9}}",
     "discussions-reply": "una respuesta",
     "discussions-create-post": "posteado",
     "discussions-create-report": "reportado",
     "discussions-deleted": "eliminado",
     "discussions-un-deleted": "restaurado",
     "discussions-modified": "editado",
-    "discussions-moved": "movido"
+    "discussions-moved": "movido",
+    "discussion-board": "en $1",
+    "message-wall-board": "on $1's wall",
+    "article-comment-board": "on $1",
+    "article-comment-comment": "a comment"
 }
