--- a/formats/logger/i18n/fr.json
+++ b/formats/logger/i18n/fr.json
@@ -24,12 +24,16 @@
     "talk": "discuter",
     "contribs": "contributions",
     "rights-none": "(aucun)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) dans $7 {{summary|$8}}",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5|$6|$8}} ($7) {{board|$8|$4}} {{summary|$9}}",
     "discussions-reply": "une réponse",
     "discussions-create-post": "posté",
     "discussions-create-report": "reporté",
     "discussions-deleted": "supprimé",
     "discussions-un-deleted": "restauré",
     "discussions-modified": "modifié",
-    "discussions-moved": "déplacé"
+    "discussions-moved": "déplacé",
+    "discussion-board": "dans $1",
+    "message-wall-board": "on $1's wall",
+    "article-comment-board": "on $1",
+    "article-comment-comment": "a comment"
 }
