--- a/formats/logger/i18n/pl.json
+++ b/formats/logger/i18n/pl.json
@@ -24,12 +24,16 @@
     "talk": "dyskusja",
     "contribs": "wkład",
     "rights-none": "(none)",
-    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5}} ($6) in $7 {{summary|$8}}",
+    "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5|$6|$8}} ($7) {{board|$8|$4}} {{summary|$9}}",
     "discussions-reply": "a reply",
     "discussions-create-post": "posted",
     "discussions-create-report": "reported",
     "discussions-deleted": "deleted",
     "discussions-un-deleted": "undeleted",
     "discussions-modified": "edited",
-    "discussions-moved": "moved"
+    "discussions-moved": "moved",
+    "discussion-board": "in $1",
+    "message-wall-board": "on $1's wall",
+    "article-comment-board": "on $1",
+    "article-comment-comment": "a comment"
 }
