Correcting grammar / more consistent to MediaWiki

--- a/formats/logger/i18n/fr.json
+++ b/formats/logger/i18n/fr.json
@@ -5,16 +5,16 @@
     "unblock": "{{user|$1}} a débloqué {{user|$2}} {{summary|$3}}",
     "reblock": "{{user|$1}} a modifié le blocage pour {{user|$2}} à $3 {{flags|$4}}{{summary|$5}}",
     "protect": "{{user|$1}} a protégé {{link|$2}} pour $3 {{summary|$4}}",
-    "reprotect": "{{user|$1}} a reprotégé {{link|$2}} pour $3 {{summary|$4}}",
+    "reprotect": "{{user|$1}} a modifié les paramètres de protection {{link|$2}} pour $3 {{summary|$4}}",
     "unprotect": "{{user|$1}} a déprotégé {{link|$2}} {{summary|$3}}",
-    "moveprotect": "{{user|$1}} a déplacé la protection de $2 à {{link|$3}} {{summary|$4}}",
-    "rights": "{{user|$1}} a modifié les droits utilisateurs {{user|$2}} de $3 à $4 {{summary|$5}}",
-    "delete": "{{user|$1}} a supprimé $2 {{summary|$3}}",
+    "moveprotect": "{{user|$1}} a déplacé les paramètres de protection de $2 vers {{link|$3}} {{summary|$4}}",
+    "rights": "{{user|$1}} a modifié les droits utilisateurs pour {{user|$2}} de $3 à $4 {{summary|$5}}",
+    "delete": "{{user|$1}} a supprimé la page $2 {{summary|$3}}",
     "restore": "{{user|$1}} a restauré les révisions de {{link|$2}} {{summary|$3}}",
     "revdel": "{{user|$1}} a supprimé la révision $2 sur $3 {{summary|$4}}",
     "logdel": "{{user|$1}} a fait une opération masquée sur $2 {{summary|$3}}",
-    "upload": "{{user|$1}} a importé {{link|$2|$3}} {{summary|$4}}",
-    "reupload": "{{user|$1}} a réimporté {{link|$2|$3}} {{summary|$4}}",
+    "upload": "{{user|$1}} a téléversé {{link|$2|$3}} {{summary|$4}}",
+    "reupload": "{{user|$1}} a téléversé la nouvelle version de {{link|$2|$3}} {{summary|$4}}",
     "move": "{{user|$1}} a renommé $2 en {{link|$3}} {{summary|$4}}",
     "moveredir": "{{user|$1}} a renommé $2 en {{link|$3}} en écrasant une redirection {{summary|$4}}",
     "merge": "{{user|$1}} a fusionné la page $2 et la page {{link|$3}} {{summary|$4}}",
@@ -26,14 +26,14 @@
     "rights-none": "(aucun)",
     "discussions": "{{user|$1}} $2 {{dlink|$3|$4|$5|$6|$8}} ($7) {{board|$8|$4}} {{summary|$9}}",
     "discussions-reply": "une réponse",
-    "discussions-create-post": "posté",
-    "discussions-create-report": "reporté",
-    "discussions-deleted": "supprimé",
-    "discussions-un-deleted": "restauré",
-    "discussions-modified": "modifié",
-    "discussions-moved": "déplacé",
+    "discussions-create-post": "a publié",
+    "discussions-create-report": "a signalé",
+    "discussions-deleted": "a supprimé",
+    "discussions-un-deleted": "a restauré",
+    "discussions-modified": "a modifié",
+    "discussions-moved": "a déplacé",
     "discussion-board": "dans $1",
-    "message-wall-board": "on $1's wall",
-    "article-comment-board": "on $1",
-    "article-comment-comment": "a comment"
+    "message-wall-board": "sur le mur de $1",
+    "article-comment-board": "sur $1",
+    "article-comment-comment": "un commentaire"
 }
