--- a/formats/logger/i18n/de.json
+++ b/formats/logger/i18n/de.json
@@ -1,25 +1,25 @@
 {
-    "edit": "{{user|$1}} bearbeitet {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
-    "new": "{{user|$1}} erstellt {{link|$2}} {{diffSize|$3}} {{summary|$4}}",
-    "block": "{{user|$1}} gesperrt {{user|$2}} für $3 {{flags|$4}}{{summary|$5}}",
-    "unblock": "{{user|$1}} entsperrt {{user|$2}} {{summary|$3}}",
-    "reblock": "{{user|$1}} blockiert geändert für {{user|$2}} zu $3 {{flags|$4}}{{summary|$5}}",
-    "protect": "{{user|$1}} geschützt {{link|$2}} zu $3 {{summary|$4}}",
-    "reprotect": "{{user|$1}} geschützt {{link|$2}} zu $3 {{summary|$4}}",
-    "unprotect": "{{user|$1}} ungeschützt {{link|$2}} {{summary|$3}}",
-    "moveprotect": "{{user|$1}} moved protection from $2 to {{link|$3}} {{summary|$4}}",
-    "rights": "{{user|$1}} hat die benutzerrechte für geändert {{user|$2}} von $3 zu $4 {{summary|$5}}",
-    "delete": "{{user|$1}} gelöscht $2 {{summary|$3}}",
-    "restore": "{{user|$1}} restaurierte revisionen auf {{link|$2}} {{summary|$3}}",
-    "revdel": "{{user|$1}} gelöscht revisionen $2 auf $3 {{summary|$4}}",
-    "logdel": "{{user|$1}} hat ein verstecktes log ereignis $2 {{summary|$3}}",
-    "upload": "{{user|$1}} hochgeladen {{link|$2|$3}} {{summary|$4}}",
-    "reupload": "{{user|$1}} reuploaded {{link|$2|$3}} {{summary|$4}}",
-    "move": "{{user|$1}} hat verlagern $2 zu {{link|$3}} {{summary|$4}}",
-    "moveredir": "{{user|$1}} hat verlagern $2 zu {{link|$3}} über eine weiterleitung {{summary|$4}}",
-    "merge": "{{user|$1}} verschmolzen dokumentation von $2 und {{link|$3}} {{summary|$4}}",
-    "abusefilter": "{{user|$1}} modifizierte missbrauchsfilter id $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
-    "newusers": "{{user|$1}} hat ein konto erstellt",
+    "edit": "{{user|$1}} bearbeitete {{link|$2}} {{diffSize|$3}} {{diff|$4}} {{summary|$5}}",
+    "new": "{{user|$1}} hat die Seite {{link|$2}} erstellt {{diffSize|$3}} {{summary|$4}}",
+    "block": "{{user|$1}} sperrte {{user|$2}} für eine Dauer von $3 {{flags|$4}}{{summary|$5}}",
+    "unblock": "{{user|$1}} hob die Sperre von {{user|$2}} auf {{summary|$3}}",
+    "reblock": "{{user|$1}} änderte die Sperreinstellungen für {{user|$2}} mit einer Sperrdauer von $3 {{flags|$4}}{{summary|$5}}",
+    "protect": "{{user|$1}} schützte die Seite {{link|$2}} $3 {{summary|$4}}",
+    "reprotect": "{{user|$1}} schützte die Seite {{link|$2}} $3 {{summary|$4}}",
+    "unprotect": "{{user|$1}} entfernte den Schutz der Seite {{link|$2}} {{summary|$3}}",
+    "moveprotect": "{{user|$1}} verschob die Schutzeinstellungen von $2 nach {{link|$3}} {{summary|$4}}",
+    "rights": "{{user|$1}} änderte die Gruppenzugehörigkeit für {{user|$2}} von $3 zu $4 {{summary|$5}}",
+    "delete": "{{user|$1}} löschte Seite $2 {{summary|$3}}",
+    "restore": "{{user|$1}} stellte die Seite {{link|$2}} wieder her {{summary|$3}}",
+    "revdel": "{{user|$1}} änderte die Sichtbarkeit einer Version der Seite {{link|$2}} {{summary|$3}}",
+    "logdel": "{{user|$1}} änderte die Sichtbarkeit eines Logbucheintrags auf {{link|$2}} {{summary|$3}}",
+    "upload": "{{user|$1}} lud {{link|$2|$3}} hoch {{summary|$4}}",
+    "reupload": "{{user|$1}} lud eine neue Version von {{link|$2|$3}} hoch {{summary|$4}}",
+    "move": "{{user|$1}} verschob die Seite $2 nach {{link|$3}} {{summary|$4}}",
+    "moveredir": "{{user|$1}} verschob die Seite $2 nach {{link|$3}} und überschrieb dabei eine Weiterleitung {{summary|$4}}",
+    "merge": "{{user|$1}} vereinigte $2 in die Seite {{link|$3}} {{summary|$4}}",
+    "abusefilter": "{{user|$1}} veränderte Filter $2 [{{link|Special:AbuseFilter/history/$2/diff/prev/$3|diff}}]",
+    "newusers": "Benutzerkonto {{user|$1}} wurde erstellt",
     "diff": "diff",
     "talk": "t",
     "contribs": "c",
