--- a/formats/logger/i18n/en.json
+++ b/formats/logger/i18n/en.json
@@ -36,5 +36,6 @@
     "discussion-board": "in $1",
     "message-wall-board": "on $1's wall",
     "article-comment-board": "on $1",
-    "article-comment-comment": "a comment"
+    "article-comment-comment": "a comment",
+    "discussions-abuse-filter-hit": "{{user|$1}} hit filter {{flink|$2}} ($3) {{board|$4|discussion}} {{summary|$5}}"
 }
