Attempt to fix revision/log hiding events. It appears that at some point MediaWiki switched from using `*-legacy` variants of messages used for revision/log hiding to their non-legacy counterparts, which have additional parsing woes. This change should fix the regular expression used to parse the summary for these, extract additional information provided by non-legacy messages, as well as incorporate that information into our existing logs.
Some refactoring has been done on `Logger#_handleDiscussions`, as ESLint
was complaining whenever I changed it. It still needs more refactoring,
but this will work for now.

Messages need to be regenerated after this change.

--- a/formats/logger/i18n/en.json
+++ b/formats/logger/i18n/en.json
@@ -12,8 +12,8 @@
     "delete": "{{user|$1}} deleted $2 {{summary|$3}}",
     "deleteredir": "{{user|$1}} deleted redirect $2 by overwriting {{summary|$3}}",
     "restore": "{{user|$1}} restored revisions on {{link|$2}} {{summary|$3}}",
-    "revdel": "{{user|$1}} deleted revisions on {{link|$2}} {{summary|$3}}",
-    "logdel": "{{user|$1}} has hidden a log event on {{link|$2}} {{summary|$3}}",
+    "revdel": "{{user|$1}} deleted revisions ($4) on {{link|$2}} [$5] {{summary|$3}}",
+    "logdel": "{{user|$1}} has hidden log events ($4) on {{link|$2}} [$5] {{summary|$3}}",
     "upload": "{{user|$1}} uploaded {{link|$2|$3}} {{summary|$4}}",
     "reupload": "{{user|$1}} reuploaded {{link|$2|$3}} {{summary|$4}}",
     "move": "{{user|$1}} moved $2 to {{link|$3}} {{summary|$4}}",
