--- a/formats/logger/i18n/qqq.json
+++ b/formats/logger/i18n/qqq.json
@@ -12,8 +12,8 @@
     "delete": "Appears when a page is deleted. $1: user deleting the page; $2: page being deleted; $3: deletion summary",
     "deleteredir": "Appears when a redirect is deleted by moving another page over it. $1: user deleting the redirect; $2: redirect being deleted; $3: deletion summary",
     "restore": "Appears when a page is undeleted. See delete for parameters.",
-    "revdel": "Appears when revisions on a page get deleted with [RevisionDelete](https://mediawiki.org/wiki/Manual:RevisionDelete). See delete for parameters.",
-    "logdel": "Appears when log events get hidden. $1: user hiding the log events; $2: log that the events are hidden from; $3: hiding summary",
+    "revdel": "Appears when revisions on a page get deleted with [RevisionDelete](https://mediawiki.org/wiki/Manual:RevisionDelete). $1: user deleting the revisions; $2: page from which revisions are being deleted; $3: deletion summary; $4: amount of revisions being deleted; $5: specific things being hidden from revisions.",
+    "logdel": "Appears when log events get hidden. See revdel for parameters.",
     "upload": "Appears when a file is uploaded. $1: the uploader; $2: file title; $3: file title without the namespace; $4: upload summary",
     "reupload": "Appears when a file is reuploaded. See upload for parameters.",
     "move": "Appears when a page is moved. $1: the mover; $2: page being moved; $3: target title; $4: move summary",
